infrastructure/k8s/items-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
        - name: items
          image: ghcr.io/neyamatullah/restauranty-items:latest
          ports:
            - containerPort: 3003
