infrastructure/k8s/discounts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discounts
spec:
  selector:
    app: discounts
  ports:
    - port: 3002
      targetPort: 3002
