infrastructure/k8s/items-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: items
spec:
  selector:
    app: items
  ports:
    - port: 3003
      targetPort: 3003
