infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth
                port:
                  number: 3001
          - path: /api/discounts(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: discounts
                port:
                  number: 3002
          - path: /api/items(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: items
                port:
                  number: 3003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
